third_party/move/move-compiler-v2/tests/deprecated/deprecated_constant_duplicated_struct2.exp

Diagnostics:
error: duplicate declaration, item, or annotation
  ┌─ tests/deprecated/deprecated_constant_duplicated_struct2.move:5:11
  │
3 │     struct C { }
  │            - Alias previously defined here
4 │     #[deprecated]
5 │     const C: u64 = 0;
  │           ^ Duplicate module member or alias 'C'. Top level names in a namespace must be unique

warning: unused alias
   ┌─ tests/deprecated/deprecated_constant_duplicated_struct2.move:12:15
   │
12 │     use 0x42::mod1;
   │               ^^^^ Unused 'use' of alias 'mod1'. Consider removing it

warning: unused alias
   ┌─ tests/deprecated/deprecated_constant_duplicated_struct2.move:31:15
   │
31 │     use 0x42::mod1;
   │               ^^^^ Unused 'use' of alias 'mod1'. Consider removing it

error: invalid name
   ┌─ tests/deprecated/deprecated_constant_duplicated_struct2.move:32:26
   │
32 │     use 0x42::mod1::C as mod1;
   │                          ^^^^ Invalid constant alias name 'mod1'. Constant alias names must start with 'A'..'Z'
